# fgcom

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README.msvc.txt  README.osx.txt  build.sh  config.h.msvc  fgcom3.c  iaxclient  libvidcap
CMakeModules/: FindPLIB.cmake
FlightGear/: keyboard.xml  keyboard.xml.patch
FlightGear/Protocol/: fgcom.xml
data/: phonebook.txt  positions.txt
fgcom/: Makefile  config.c  config.h  event.c  event.h  fgcom.c  fgcom.h  lighthouse.c  mode.c  mode.h  net.c  net.h  oggfile.c  testclient.c
fgcom/contrib/: asoundrc
fgcom/doc/: README  wav2ogg.doc
fgcom/test/: openaltest.c  openaltest2.c  testclient.c
iax-fgcom-client/: CMakeLists.txt  Makefile  cmake_install.cmake
iax-fgcom-client/cmake_modules/: FindEFENCE.cmake  FindFLEX.cmake  FindGLIB.cmake  FindGLIB2.cmake  FindLIB3DS.cmake  FindLIBMATH.cmake  FindOPENAL.cmake  FindPORTAUDIO.cmake  FindPTHREAD.cmake  FindSNDFILE.cmake  FindSPEEX.cmake
iax-fgcom-client/gsm/: Makefile  cmake_install.cmake
iax-fgcom-client/gsm/src/: CMakeLists.txt  Makefile  cmake_install.cmake
iax-fgcom-client/include/: config.h  config.h.cmake
iax-fgcom-client/lib/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  audio_encode.c  audio_openal.c  audio_openal.h  audio_portaudio.c  cmake_install.cmake  iaxclient.h  iaxclient_lib.c  iaxclient_lib.h  video.c
iax-fgcom-client/libiax2/: CMakeLists.txt  Makefile  cmake_install.cmake  iax-client.h  iax.c  iax2-parser.h  miniphone.c
iax-fgcom-client/libspeex/: CMakeCache.txt  CMakeLists.txt  Makefile  arch.h  cmake_install.cmake  config.h  config.h.cmake  mdf.c  preprocess.c
iax-fgcom-client/libspeex/speex/: .speex_preprocess.h.swp  speex_echo.h  speex_preprocess.h
iax-fgcom-client/portmixer/: CMakeLists.txt  Makefile  cmake_install.cmake
iax-fgcom-client/spandsp/: CMakeLists.txt  Makefile  cmake_install.cmake
iaxclient-2.0.2/: Makefile.in  configure  configure.ac
iaxclient-2.0.2-openal/: README
iaxclient-2.0.2-openal/lib/: audio_alsa.c  audio_file.c  audio_file.h  audio_openal.c  iaxclient_lib.c  jitterbuf.c
iaxclient-2.0.2-openal/lib/portaudio/: README.iaxclient
iaxclient-2.0.2-openal/lib/sox/: soxcompat.c
iaxclient-2.0.2-openal/lib/spandsp/: plc.c
iaxclient-2.0.2-openal/simpleclient/WinIAX/: WinIAX.cpp  WinIAX.dsp  resource.h  resource.rc
iaxclient-2.0.2-openal/simpleclient/iax2slin/: Makefile
iaxclient-2.0.2-openal/simpleclient/iaxcomm/: Info.plist  Makefile  QUICKSTART  accounts.cc  calls.cc  calls.h  dial.cc  directory.cc  directory.h  frame.cc  iaxcomm.htb  iaxcomm.rc  prefs.h  ringer.cc  ringer.h
iaxclient-2.0.2-openal/simpleclient/iaxphone/: Info.plist
iaxclient-2.0.2-openal/simpleclient/testcall/: Makefile  testcall.c
iaxclient-2.0.2-openal/simpleclient/tkphone/: Makefile  README  monitor.ui.tcl  phone.ui.tcl  pref.ui  pref.ui.tcl  tones.c
iaxclient-2.0.2-openal/simpleclient/vtestcall/: testcall.c
iaxclient-2.0.2-openal/simpleclient/win32/: simpleiax.dsp  simpleiax.dsw  simpleiax.opt  simpleiax.plg
iaxclient-2.0.2-openal/simpleclient/wx/: Makefile  wxVC.dsp
iaxclient-2.0.2/lib/: audio_encode.c
iaxclient-2.0.2/simpleclient/: Makefile.in
iaxclient-2.02/lib/: Makefile  audio_openal.c  audio_openal.h  audio_portaudio.c  iaxclient.h  iaxclient_lib.c  jitterbuf.h
iaxclient-2.02/lib/sox/: resample.c
iaxclient-2.02/lib/wince/: inttypes.h
iaxclient-2.02/simpleclient/WinIAX/: ReadMe.txt  StdAfx.cpp  WinIAX.dsw  winiax.h
iaxclient-2.02/simpleclient/iax2slin/: iax2slin.c
iaxclient-2.02/simpleclient/iaxcomm/: README  accounts.h  app.h  devices.cc  devices.h  dial.h  frame.h  iaxcomm.exe.manifest  iaxcomm.icns  main.cc  main.h  prefs.cc  ring.raw
iaxclient-2.02/simpleclient/iaxphone/: Makefile  iaxphone.cc  iaxphone.h
iaxclient-2.02/simpleclient/testcall/: .cvsignore  testcall-jb.c
iaxclient-2.02/simpleclient/tkphone/: License  iaxcli.c  monitor.ui  phone.ui  tkiaxphone
iaxclient-2.02/simpleclient/vtestcall/: Makefile
iaxclient-2.02/simpleclient/win32/: Makefile  simpleiax.c  simpleiax.ncb
iaxclient-2.02/simpleclient/wx/: Info.plist  README  wx.cc
iaxclient-2.1/: configure.ac
iaxclient-2.1beta3/: Makefile.in  aclocal.m4  config.h.in  configure
iaxclient-2.1beta3/autom4te.cache/: output.0  output.1  traces.0  traces.1
iaxclient-2.1beta3/lib/: Makefile.am  Makefile.in  audio_openal.c  audio_openal.h  audio_portaudio.c  iaxclient_lib.c
iaxclient-2.1beta3/simpleclient/: Makefile.in
iaxclient-2.1beta3/simpleclient/WinIAX/: Makefile.in
iaxclient-2.1beta3/simpleclient/iaxcomm/: Makefile.in
iaxclient-2.1beta3/simpleclient/iaxphone/: Makefile.in
iaxclient-2.1beta3/simpleclient/stresstest/: Makefile.in
iaxclient-2.1beta3/simpleclient/testcall/: Makefile.in
iaxclient-2.1beta3/simpleclient/tkphone/: Makefile.in
iaxclient-2.1beta3/simpleclient/vtestcall/: Makefile.in
iaxclient-trunk-20090506/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
iaxclient-trunk-20090506/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
iaxclient-trunk-20090506/simpleclient/: Makefile.in
iaxclient/lib/: Makefile  audio_encode.c  audio_openal.c  codec_alaw.c  iaxclient_lib.c  unixfuncs.c
iaxclient/lib/libspeex/: lsp.c  (+1 more)
iaxclient2-trunk/: configure
iaxclient2-trunk/autom4te.cache/: output.0  output.1  traces.0  traces.1
iaxclient2-trunk/lib/: Makefile.am  Makefile.in
libvidcap-0.2.1/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libvidcap-0.2.1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libvidcap-0.2.1/examples/: Makefile.in
libvidcap-0.2.1/include/: Makefile.in
libvidcap-0.2.1/src/: Makefile.in
server/: auth.conf  fg-config-builder.pl  gen_phonebook.pl
server/fgcom-data/: phonebook.txt  positions.txt
src/: CMakeLists.txt  Makefile  config.c  config.h  event.c  fgcom  fgcom.c  fgcom.cpp  fgcom.h  fgcom_init.cpp  fgcom_init.h  getopt.c  mode.c  oggfile.c  oggfile.h  position.cpp  position.h  test  test.c  usage.cpp  utils.cpp  utils.h
src/cmake_modules/: FindLIBGLIB2.cmake  FindLIBGNET.cmake  FindLIBOGGZ.cmake
(+59 files in other folders)
