
FIND_PACKAGE(PORTAUDIO REQUIRED)
FIND_PACKAGE(LIBMATH REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/lib ${PORTAUDIO_INCLUDE_DIR})
ADD_EXECUTABLE(fgcom fgcom.c)

# SET(LOCAL_LIBRARIES_PATH lib gsm/src libspeex spandsp portmixer libiax2)
SET(LOCAL_LIBRARIES lib/libiaxclient.a gsm/src/libgsm.a libspeex/libspeex.a spandsp/libspandsp.a portmixer/libportmixer.a libiax2/libiax2.a)

# FOREACH(LIB_PATH ${LOCAL_LIBRARIES_PATH})
#	LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/${LIB_PATH})
# ENDFOREACH(LIB_PATH ${LOCAL_LIBRARIES_PATH})

FOREACH(LIBRARY ${LOCAL_LIBRARIES})
	TARGET_LINK_LIBRARIES(fgcom ${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/${LIBRARY})
ENDFOREACH(LIBRARY ${LOCAL_LIBRARIES})

TARGET_LINK_LIBRARIES(fgcom ${PORTAUDIO_LIBRARY})
TARGET_LINK_LIBRARIES(fgcom ${LIBMATH_LIBRARY})
