
FIND_PACKAGE(LIBMATH REQUIRED)
FIND_PACKAGE(LIBGLIB2 REQUIRED)
FIND_PACKAGE(LIBGNET REQUIRED)
FIND_PACKAGE(LIBOGGZ REQUIRED)

IF(USE_OPENAL)
  FIND_PACKAGE(OPENAL REQUIRED)
  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/lib ${OPENAL_INCLUDE_DIR})
ELSEIF(USE_PORTAUDIO)
  FIND_PACKAGE(PORTAUDIO REQUIRED)
  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/lib ${PORTAUDIO_INCLUDE_DIR})
ENDIF(USE_OPENAL)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/lib ${PORTAUDIO_INCLUDE_DIR} ${GLIB2_INCLUDE_DIR} ${GLIB2_CONFIG_DIR} ${OGGZ_INCLUDE_DIR} ${GNET2_INCLUDE_DIR} ${GNET2_CONFIG_DIR})

ADD_EXECUTABLE(fgcom fgcom.c config.c event.c oggfile.c net.c)

SET(LOCAL_LIBRARIES lib/libiaxclient.a gsm/src/libgsm.a libspeex/libspeex.a spandsp/libspandsp.a portmixer/libportmixer.a libiax2/libiax2.a)


FOREACH(LIBRARY ${LOCAL_LIBRARIES})
	TARGET_LINK_LIBRARIES(fgcom ${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/${LIBRARY})
ENDFOREACH(LIBRARY ${LOCAL_LIBRARIES})

IF(USE_PORTAUDIO)
  TARGET_LINK_LIBRARIES(fgcom ${PORTAUDIO_LIBRARY})
ELSEIF(USE_OPENAL)
  TARGET_LINK_LIBRARIES(fgcom ${OPENAL_LIBRARY})
ENDIF(USE_PORTAUDIO)

TARGET_LINK_LIBRARIES(fgcom ${LIBMATH_LIBRARY})
TARGET_LINK_LIBRARIES(fgcom ${GLIB2_LIBRARY})
TARGET_LINK_LIBRARIES(fgcom ${GNET_LIBRARY})
TARGET_LINK_LIBRARIES(fgcom ${OGGZ_LIBRARY})
