

# SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/cmake_modules")

FIND_PACKAGE(PORTAUDIO REQUIRED)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	SET(PORTMIXER_SRC ./px_unix_oss/px_unix_oss.c)
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Windows")
	SET(PORTMIXER_SRC ./px_win_wmme/px_win_wmme.c)
ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
	SET(PORTMIXER_SRC ./px_mac/px_mac.c ./px_mac_core/px_mac_core.c)
ELSE(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	SET(PORTMIXER_SRC ./px_none/px_none.c)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")

INCLUDE_DIRECTORIES(./px_common ${PORTAUDIO_INCLUDE_DIR})

ADD_LIBRARY(portmixer STATIC ${PORTMIXER_SRC})
ADD_LIBRARY(portmixer-dynamic SHARED ${PORTMIXER_SRC})
SET_TARGET_PROPERTIES(portmixer PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(portmixer-dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(portmixer-dynamic PROPERTIES OUTPUT_NAME "portmixer")

MESSAGE(STATUS "------------------------------------------------------------")
MESSAGE(STATUS "portmixer source dir		: ${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/portmixer")
IF(CMAKE_BUILD_TYPE STREQUAL "debug")
	MESSAGE(STATUS "Src files			: ${PORTMIXER_SRC}")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "debug")

