
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/spandsp)

SET(SPANDSP_SRC plc.c)

ADD_LIBRARY(spandsp STATIC ${SPANDSP_SRC})
ADD_LIBRARY(spandsp-dynamic SHARED ${SPANDSP_SRC})
SET_TARGET_PROPERTIES(spandsp PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(spandsp-dynamic PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(spandsp-dynamic PROPERTIES OUTPUT_NAME "spandsp")

MESSAGE(STATUS)
MESSAGE(STATUS "------------------------------------------------------------")
MESSAGE(STATUS "libspandsp source dir	: ${PROJECT_SOURCE_DIR}/${IAX_CLIENT_DIR}/spandsp")
IF(CMAKE_BUILD_TYPE STREQUAL "debug")
	MESSAGE(STATUS "Src files			: ${SPANDSP_SRC}")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "debug")
